# smart_remarkable

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  SELECT_MODE.md  THIRD_PARTY_LICENSES.md  build.sh  run_eval.sh
.cargo/: config.toml
.github/workflows/: build.yml  quality.yml
evaluation_results/2024-12-21_13-57-31/: results.md
evaluation_results/2024-12-21_13-57-31/blank_math/claude_sonnet_3.5_no_seg/1/: result.out
evaluation_results/2024-12-29_21-05-47/: results.md
evaluations/blank_math/: result.json  result.out
evaluations/tic_tac_toe_1/: result.json  result.out
evaluations/x_in_box/: result.json  result.out
evaluations/x_in_boxes/: result.json  result.out
prompts/: draw.json  draw_image.json  general.json  selection.json  tool_draw_answer.json  tool_draw_sketch.json  tool_draw_sketch_image.json  tool_draw_svg.json  tool_draw_text.json  tool_fetch_todo.json
src/: cancellation.rs  config.rs  coordinator.rs  device.rs  embedded_assets.rs  image_gen.rs  keyboard.rs  lib.rs  main.rs  pen.rs  screenshot.rs  segmenter.rs  skeleton.rs  status.rs  touch.rs  util.rs  web_server.rs
src/llm_engine/: anthropic.rs  google.rs  mod.rs  openai.rs
src/simulation/: interaction_logger.rs  mod.rs  screenshot_simulator.rs  touch_simulator.rs
src/web/: app.js  index.html  style.css
test_simulation_data/: touch_events.json
tests/: menu_detect.rs  trace_image.rs
utils/rm2/: curl  evtest
utils/rmpp/: evtest  uinput-3.16.ko  uinput-3.17.ko  uinput-3.18.ko  uinput-3.22.ko
xovi-ext/llmbutton/: main.c  xovi.c  xovi.h
(+126 files in other folders)
